test/tests/stages/13_floating-point_numbers/valid/floating_expressions/simple.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[21]:
  int
  identifier(main)
  (
  void
  )
  {
  double
  identifier(x)
  =
  const double(2.0)
  ;
  return
  (
  identifier(x)
  *
  const double(2.0)
  ==
  const double(4.0)
  )
  ;
  }
