test/tests/stages/13_floating-point_numbers/invalid_types/mod_double_2.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[17]:
  int
  identifier(main)
  (
  void
  )
  {
  double
  identifier(e)
  =
  const double(3.0)
  %
  const int(5)
  ;
  return
  const int(0)
  ;
  }
